# weakauras-mass-import

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: app.rs  categories.rs  decoder.rs  error.rs  lib.rs  lua_parser.rs  main.rs  saved_variables.rs  theme.rs  util.rs
src/app/: AGENTS.md  actions.rs  message.rs  mod.rs  state.rs
src/app/actions/: handlers.rs  import.rs  loading.rs  mod.rs  removal.rs
src/app/ui/: dialogs.rs  main_panel.rs  mod.rs  sidebar.rs
tests/: categories_tests.rs  decoder_tests.rs  integration_test.rs  lua_parser_tests.rs  saved_variables_tests.rs
