[package]
name = "weakaura-mass-import"
version = "0.1.0"
edition = "2021"
description = "A GUI tool to mass import WeakAura strings into WoW SavedVariables"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WeakAura decoding - Use existing crate!
weakauras-codec = { version = "0.1.1", features = ["serde"] }

# Backup manual decoding deps
base64 = "0.22"
flate2 = "1.0"

# Lua parsing for SavedVariables
full_moon = "1.0"

# File dialogs
rfd = "0.15"

# Clipboard
arboard = "3.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "weakaura_mass_import"
path = "src/lib.rs"

[[bin]]
name = "weakaura-mass-import"
path = "src/main.rs"

[[bin]]
name = "decode_test"
path = "src/bin/decode_test.rs"

[profile.release]
opt-level = 3
lto = true
