[package]
name = "weakauras-mass-import"
version = "3.0.0"
edition = "2021"
rust-version = "1.70"
description = "A GUI tool to mass import WeakAura strings into WoW SavedVariables"
authors = ["Xerrion <lasse@xerrion.dk>"]
license = "MIT"
repository = "https://github.com/Xerrion/weakauras-mass-import"
homepage = "https://github.com/Xerrion/weakauras-mass-import"
readme = "README.md"
keywords = ["weakauras", "wow", "world-of-warcraft", "gui", "import"]
categories = ["gui", "games"]
exclude = ["/Addons/", "*.txt", "*.log"]

[dependencies]
# GUI - iced 0.14 with tokio async runtime
iced = { version = "0.14", features = ["tokio", "advanced"] }

# Toast notifications
iced_toasts = { git = "https://github.com/Xerrion/iced-toasts", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WeakAura decoding
weakauras-codec = { version = "0.1.1", features = ["serde"] }

# Compression/encoding (backup for manual decoding)
base64 = "0.22"
flate2 = "1.0"

# Lua parsing for SavedVariables
full_moon = "1.0"

# File dialogs
rfd = "0.15"

# Clipboard
arboard = "3.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }

[lib]
name = "weakauras_mass_import"
path = "src/lib.rs"

[[bin]]
name = "weakauras-mass-import"
path = "src/main.rs"

[[bin]]
name = "decode_test"
path = "src/bin/decode_test.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
# Optimize dependencies in dev for faster runtime
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
